--- a/config_files/incydenty.config
+++ b/config_files/incydenty.config
@@ -3,11 +3,11 @@
 # <opcje>
 #--------------------------------------------
 
-Modyfikacja danych pacjenta (nazwisko, data urodzenia, adres, usuwanie dokumentacji błędnie wygenerowanej)
+Modyfikacja danych pacjenta
 
-Zmiany dot.zleceń badań(wycofanie badań, pomylenie badań)
+Zmiany dot.zleceń badań
 
-Zmiany dot. leków(zmiana zlecenia, wycofanie zlecenia)
+Zmiany dot. leków
 
 Cofanie autoryzacji dokumentacji med. celem wprowadzenia zmian
  zgon
