Updated: files group
Fixed: relative links
Updated: dashboard options
Added: filter and new file options in /dashboard/publications
Deleted: links and contact html files
Changed: project tree

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-server/App/static/* linguist-vendored 
-server/App/templates/* linguist-vendored 
+App/static/* linguist-vendored 
+App/templates/* linguist-vendored 
