--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 alembic==1.3.1
 Click==7.0
+feedgen==0.9.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
-gitdb==4.0.5
-GitPython==3.1.2
+gitdb==4.0.2
+GitPython==3.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lxml==4.5.0
 Mako==1.1.0
 MarkupSafe==1.1.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.13.0
-smmap==3.0.4
+smmap==3.0.1
 SQLAlchemy==1.3.11
 Werkzeug==0.16.0
