--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-App/static/* linguist-vendored 
-App/templates/* linguist-vendored 
+*.html linguist-vendored 
+*.js linguist-vendored 
+*.css linguist-vendored
